--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Boolando</title>
 </head>
 <body>
+    <main>
+        <div class="row">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+        <div class="row">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+        
+    </main>
     
 </body>
 </html>
