--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="cards">
                 <figure>
-                    <div class="placeholder">
+                    <div class="placeholder discount50 sostenibility">
                         <div class="overlay"></div>
                     </div>
                     <span class="like">&#9825;</span>
