--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         <div class="row">
             <div class="cards">
                 <figure>
-                    <div class="placeholder discount50 sostenibility">
-                        <div class="overlay"></div>
+                    <div class="discount30 sostenibility">
+                        <img src="img/1.webp" alt="1" class="placeholder">
+                        <div class="overlay ">
+                            <img src="img/1b.webp" alt="1b" class="">
+                        </div>
                     </div>
                     <span class="like">&#9825;</span>
                     <figcaption>
