--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <div class="discount30 sostenibility">
                         <img src="img/1.webp" alt="1" class="placeholder">
                         <div class="overlay ">
-                            <img src="img/1b.webp" alt="1b" class="">
+                            <img src="img/1b.webp" alt="1b">
                         </div>
                     </div>
                     <span class="like">&#9825;</span>
@@ -29,7 +29,22 @@
                 </figure>
             </div>
             <div class="cards"></div>
-            <div class="cards"></div>
+            <div class="cards">
+                <figure>
+                    <div class="discount30">
+                        <!-- <img src="img/1.webp" alt="1" class="placeholder"> -->
+                        <div class="overlay ">
+                            <!-- <img src="img/1b.webp" alt="1b"> -->
+                        </div>
+                    </div>
+                    <span class="like">&#9825;</span>
+                    <figcaption>
+                        <span class="small-text">come zucchero filato</span> <br>
+                        <span class="big-text">voglia di colori pastello</span> <br>
+                        <span class="discount">129,99 &euro; </span>
+                    </fig-caption>
+                </figure>
+            </div>
         </div>
 
         <div class="row">
